<resources>
    <string name="app_name">Sobarna Movies</string>
    <string name="sobarna_movies">Sobarna Movies</string>
    <string name="you_can_watch_what_you_want">You can watch what you want</string>
    <string name="Movie">Movie</string>
    <string name="TV_Show">TV Show</string>
    <string name="movie_list">Movie List</string>
    <string name="tv_show_list">Tv Show List</string>
    <string name="director">Director:</string>
    <string name="overview">Overview:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>