<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.TvShowFragment">
    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/cinema"
        android:contentDescription="@string/sobarna_movies" />


    <ProgressBar
        android:id="@+id/pbShowList"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sobarna_movies"
        android:layout_marginStart="120dp"
        android:layout_marginTop="25dp"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:fontFamily="@font/autour_one"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTvShowList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        tools:listitem="@layout/movie_list"
        />

</FrameLayout>